// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PreviewEditButton when is_in_edit_mode is false, it will create a Edit button 1`] = `
<button type="button" class="tlp-button-secondary tlp-button-outline tlp-button-small rte-button">
  <i aria-hidden="true" class="fa-fw fa-solid fa-pencil tlp-button-icon"></i>
  Edit
</button>
`;

exports[`PreviewEditButton when is_in_edit_mode is true, it will create a Preview button 1`] = `
<button type="button" class="tlp-button-secondary tlp-button-outline tlp-button-small rte-button">
  <i aria-hidden="true" class="fa-fw fa-solid fa-eye tlp-button-icon"></i>
  Preview
</button>
`;
